# alfalfa-notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  end_use_loads_alfalfa.ipynb  pyproject.toml  simple_run.ipynb  twobldgs.ipynb  urbanopt_to_alfalfa.ipynb
.github/: dependabot.yml
.github/workflows/: pr-labels.yml  pre-commit.yml
example_urbanopt_project/run/example_urbanopt_scenario/1/: in.osm
example_urbanopt_project/run/example_urbanopt_scenario/2/: in.osm
twobldgs/: small_office.osw
