[project]
name = "cctwin"
version = "0.0.1"
description = ""
authors = [
    {name = "Anya Petersen", email = "anya.petersen@nrel.gov" }
]

[tool.poetry.dependencies]
python = ">=3.8"
# update this after release
alfalfa-client = "0.7.0"
jupyterlab = "^3.0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
