[tool.poetry]
name = "alfalfa-notebooks"
version = "1.0.0"
description = "Introductory Jupyter notebooks for interacting with an Alfalfa web service via the alfalfa-client Python library."
authors = ["Anya Petersen <anya.petersen@nlr.gov>", "Nicholas Long <nicholas.long@nlr.gov>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
alfalfa-client = "1.0.0"
jupyterlab = "^4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
